--- a/features/main.html
+++ b/features/main.html
@@ -52,6 +52,7 @@
   </h3>
 
   <button type="button" class="button1">bottone </button>
+  <button type="button" class="button2">bottone 2 </button>
 </div>
 
 
