--- a/features/main.html
+++ b/features/main.html
@@ -55,6 +55,8 @@
   <button type="button" class="button2">bottone 2 </button>
 </div>
 
+<a href="..\features\news\index.html"> news </a>
+
 
 </body>
 </html>
