[012] CHANGE news button

--- a/features/main.html
+++ b/features/main.html
@@ -30,6 +30,8 @@
   <p>
    In questa sezione troverai le notizie aggiornate sulla Statale di Milano, basati sui temi di <span id="specialP"> didattica, innovazione e cultura</span> 
   </p>
+
+  <a href="..\features\news\NewsView.html"> NEWS </a>
   
 
 </div>
@@ -49,13 +51,6 @@
      Aliquam erat volutpat. Morbi purus augue, viverra vel blandit at, egestas nec purus.
   </p>
 </div>
-
-<div id="leftDiv">
-  <a href="..\features\news\NewsView.html"> news </a>
-
-</div>
-
-
 
 </body>
 </html>
