--- a/features/login/login.html
+++ b/features/login/login.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>UniBookMii</title>
+    <title>UniBookMi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="http://127.0.0.1:5500/resources/styles/login.css">
     <link rel="icon" href="http://127.0.0.1:5500/resources/icons/favicon.ico" type="image/png">
-    <script src="http://127.0.0.1:5500/features/login/script.js"></script>
 </head>
 
 <!--<header>
@@ -68,6 +67,11 @@
         </div>
     </div>
 
+ <!-- script always goes under all html code-->
+    
+    <div>
+        <script src="http://127.0.0.1:5500/features/login/script.js"></script>
+    </div>
 </body>
 
 </html>
