--- a/features/login/login.html
+++ b/features/login/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="http://127.0.0.1:5500/resources/styles/login.css">
-    <link rel="icon" href="http://127.0.0.1:5500/resources/icons/favicon.ico" type="image/png">
+    <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/faviconUni.ico">
 </head>
 
 <!--<header>
@@ -48,7 +48,7 @@
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <a href="#">Forget Your Password?</a>
-                <button>Sign In</button>
+                <button id="signIn">Sign In</button>
             </form>
         </div>
         <div class="toggle-container">
