--- a/features/main.html
+++ b/features/main.html
@@ -11,7 +11,7 @@
   <title>UniBookMi</title>
   <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/faviconUni.ico">
   <link rel="stylesheet" href="http://127.0.0.1:5500/resources/styles/main.css">
-  <script src="http://127.0.0.1:5500/features/myScript.js"></script>
+  
 </head>
 
 <body>
@@ -39,18 +39,18 @@
 <div id="rightDiv">
 
   <h3>
-    Iscrizioni
+    User Info
   </h3>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in lacus eleifend, 
-    hendrerit sem sed, interdum augue. In posuere nulla eget augue gravida iaculis.
-     Fusce viverra diam purus, eu finibus metus facilisis eget. Nulla non tincidunt odio. 
-     Proin commodo tincidunt nulla, quis luctus mi tempor sed. Ut nec congue leo, eu blandit urna. 
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor sed sapien ut tincidunt.
-      Nunc mollis tellus in odio consequat gravida. Donec at libero non ante consectetur tristique.
-     Aliquam erat volutpat. Morbi purus augue, viverra vel blandit at, egestas nec purus.
+
+    guarda l'info del tuo utente
+    
   </p>
+  <button id="goToUserInfo">Sign In</button>
 </div>
 
+
+
+<script src="http://127.0.0.1:5500/features/mainScript.js"></script>
 </body>
 </html>
