--- a/features/userInfo/UserInfoView.html
+++ b/features/userInfo/UserInfoView.html
@@ -8,7 +8,7 @@
 
 <head>
   <title>UniBookMi</title>
-  <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/faviconUni.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="http://127.0.0.1:5500/resources/styles/userInfo.css">
   
@@ -21,39 +21,42 @@
     <div class="container rounded bg-white mt-5 mb-5">
       <div class="row">
           <div class="col-md-3 border-right">
-              <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
+              <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="http://127.0.0.1:5500/resources/images/profile pics/RoundProfilePic.jpeg"><span class="font-weight-bold">Studente</span><span class="text-black-50">edogaru@studenti.unimi.it</span><span> </span></div>
           </div>
           <div class="col-md-5 border-right">
               <div class="p-3 py-5">
                   <div class="d-flex justify-content-between align-items-center mb-3">
                       <h4 class="text-right">Profile Settings</h4>
                   </div>
+
+                   <!-- User name and surname -->
                   <div class="row mt-2">
                       <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value=""></div>
                       <div class="col-md-6"><label class="labels">Surname</label><input type="text" class="form-control" value="" placeholder="surname"></div>
                   </div>
+
+                   <!-- User mobile phone -->
                   <div class="row mt-3">
                       <div class="col-md-12"><label class="labels">Mobile Number</label><input type="text" class="form-control" placeholder="enter phone number" value=""></div>
-                      <div class="col-md-12"><label class="labels">Address Line 1</label><input type="text" class="form-control" placeholder="enter address line 1" value=""></div>
-                      <div class="col-md-12"><label class="labels">Address Line 2</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                      <div class="col-md-12"><label class="labels">Postcode</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                      <div class="col-md-12"><label class="labels">State</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                      <div class="col-md-12"><label class="labels">Area</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                      <div class="col-md-12"><label class="labels">Email ID</label><input type="text" class="form-control" placeholder="enter email id" value=""></div>
-                      <div class="col-md-12"><label class="labels">Education</label><input type="text" class="form-control" placeholder="education" value=""></div>
                   </div>
+
+                  <!-- User departmemts and year -->
                   <div class="row mt-3">
-                      <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
-                      <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
+                      <div class="col-md-8"><label class="labels">Department</label><form action="#">
+                        <select name="Departments" id="departmentSelect">
+                        </select>
+                  </form></div>
+                      <div class="col-md-2"><label class="labels">Year</label><input type="text" class="form-control" value="" placeholder="1"></div>
                   </div>
                   <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
               </div>
           </div>
           <div class="col-md-4">
               <div class="p-3 py-5">
-                  <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
-                  <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text" class="form-control" placeholder="experience" value=""></div> <br>
-                  <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>
+                  <div class="d-flex justify-content-between align-items-center experience"><span class="border px-3 p-1 add-reservation"><i class="fa fa-plus"></i>&nbsp; Modify reservations </span></div><br>
+                  <div class='square-box-reservation'>
+                    <div class='square-content-reservation'><div><span>List...</span></div></div>
+                </div>
               </div>
           </div>
       </div>
@@ -62,7 +65,9 @@
     </div>
 
 
+    <!-- User script fetch departments -->
     <script src="http://127.0.0.1:5500/features/userInfo/userInfoScript.js"></script>
+    <script> fetchJson()</script>
 </body>
 </html>
 
