--- a/features/userInfo/UserInfoView.html
+++ b/features/userInfo/UserInfoView.html
@@ -18,7 +18,12 @@
     </head>
 
     <body>
-        <div id="invisibleDiv"></div>
+
+        <div style="background-color: white; width: 100%;height:100px;">
+            <a href="http://127.0.0.1:5500/features/login/login.html"><img src="http://127.0.0.1:5500/resources/images/logoOrizzontale.jpg" alt="HTML tutorial" style="width: 300px;height:100px; float: left;"></a>
+            
+        </div>
+        
         <div class="container rounded bg-white mt-5 mb-5">
         <div class="row">
             <div class="col-md-3 border-right">
