[015] ADD settings icon

--- a/features/userInfo/UserInfoView.html
+++ b/features/userInfo/UserInfoView.html
@@ -78,6 +78,12 @@
                 </div>
             </div>
             </div>
+
+
+            <div class="container rounded bg-white mt-5 mb-5">
+                
+                       
+            </div>
             </div>
             </div>
 
