--- a/features/userInfo/UserInfoView.html
+++ b/features/userInfo/UserInfoView.html
@@ -33,6 +33,8 @@
                     <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="http://127.0.0.1:5500/resources/images/profile pics/RoundProfilePic3.jpeg">
                         <span class="font-weight-bold">Studente</span><span class="text-black-50">giulia.floris@studenti.unimi.it</span></div>
                 </div>
+
+                <!-- Profile info -->
                 <div class="col-md-5 border-right">
                     <div class="p-3 py-5">
                         <div class="d-flex justify-content-between align-items-center mb-3">
@@ -82,11 +84,23 @@
 
             <!-- SETTINGS -->
             <div class="container rounded bg-white mt-5 mb-5">
-                 <!-- User general info + pic -->
+                <div class="row">
+                 <!-- settings icon + mail -->
                  <div class="col-md-3 border-right">
-                    <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-3" width="150px" src="http://127.0.0.1:5500/resources/images/settingsIcon.png">
+                    <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="http://127.0.0.1:5500/resources/images/settingsIcon.png">
                         <span class="font-weight-bold">Settings</span><span class="text-black-50">giulia.floris@studenti.unimi.it</span></div>
                 </div>
+
+               <!-- Profile info -->
+               <div class="col-md-5">
+                    <!-- Dark mode toggle -->
+                        <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Toggle Dark mode</button></div>
+               </div>
+                </div>
+            </div> 
+
+
+
                        
             </div>
             </div>
