[EXTERNAL] FIX indentation

--- a/features/main.html
+++ b/features/main.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -11,7 +10,7 @@
   <title>UniBookMi</title>
   <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/faviconUni.ico">
   <link rel="stylesheet" href="http://127.0.0.1:5500/resources/styles/main.css">
-  
+
 </head>
 
 <body>
@@ -19,38 +18,40 @@
   <div id="centerDiv">
     <img src="..\resources\images\logoOrizzontale.jpg" alt="LOGO">
   </div>
-  
+
 
   <div></div>
 
-<div id="leftDiv">
-  <h3>
-    News
-  </h3>
-  <p>
-   In questa sezione troverai le notizie aggiornate sulla Statale di Milano, basati sui temi di <span id="specialP"> didattica, innovazione e cultura</span> 
-  </p>
+  <div id="leftDiv">
+    <h3>
+      News
+    </h3>
+    <p>
+      In questa sezione troverai le notizie aggiornate sulla Statale di Milano, basati sui temi di <span id="specialP">
+        didattica, innovazione e cultura</span>
+    </p>
 
-  <a href="..\features\news\NewsView.html"> NEWS </a>
-  
-
-</div>
-
-<div id="rightDiv">
-
-  <h3>
-    User Info
-  </h3>
-  <p>
-
-    guarda l'info del tuo utente
-    
-  </p>
-  <button id="goToUserInfo">Sign In</button>
-</div>
+    <a href="..\features\news\NewsView.html"> NEWS </a>
 
 
+  </div>
 
-<script src="http://127.0.0.1:5500/features/mainScript.js"></script>
+  <div id="rightDiv">
+
+    <h3>
+      User Info
+    </h3>
+    <p>
+
+      guarda l'info del tuo utente
+
+    </p>
+    <button id="goToUserInfo">Sign In</button>
+  </div>
+
+
+
+  <script src="http://127.0.0.1:5500/features/mainScript.js"></script>
 </body>
+
 </html>
