--- a/features/main.html
+++ b/features/main.html
@@ -43,10 +43,10 @@
     </h3>
     <p>
 
-      guarda l'info del tuo utente
+      User Section
 
     </p>
-    <button id="goToUserInfo">Sign In</button>
+    <button id="goToUserInfo">ser Section</button>
   </div>
 
 
