[015] FIX home page text

--- a/features/main.html
+++ b/features/main.html
@@ -43,7 +43,7 @@
     </h3>
     <p>
 
-      User Section
+      User Section, containing settings and summary
 
     </p>
     <button id="goToUserInfo">ser Section</button>
