[014] DELETE unused files

--- a/features/home/index.html
+++ b/features/home/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>Home</title>
     <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/faviconUni.ico">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="css/templatemo-ocean-vibes.css">
+    <link rel="stylesheet" href="http://127.0.0.1:5500/resources/styles/main.css">
 
 </head>
 
