--- a/features/home/index.html
+++ b/features/home/index.html
@@ -26,28 +26,23 @@
             <ul id="inline-popups">
                 <li class="tm-nav-item">
                     <a href="#intro" data-effect="mfp-move-from-top" class="tm-nav-link">
-                        Introduction
+                        User
                         <i class="fas fa-3x fa-water"></i>
                     </a>
                 </li>
                 <li class="tm-nav-item">
                     <a href="#gallery" data-effect="mfp-move-from-top" class="tm-nav-link" id="tm-gallery-link">
-                        Gallery
+                        Reservations
                         <i class="far fa-3x fa-images"></i>
                     </a>
                 </li>
                 <li class="tm-nav-item">
                     <a href="#testimonials" data-effect="mfp-move-from-top" class="tm-nav-link">
-                        Testimonials
+                        News
                         <i class="far fa-3x fa-smile"></i>
                     </a>
                 </li>
-                <li class="tm-nav-item">
-                    <a href="#about" data-effect="mfp-move-from-top" class="tm-nav-link">
-                        About
-                        <i class="fas fa-3x fa-tint"></i>
-                    </a>
-                </li>
+
                 <li class="tm-nav-item">
                     <a href="#contact" data-effect="mfp-move-from-top" class="tm-nav-link">
                         Contact
