--- a/features/home/index.html
+++ b/features/home/index.html
@@ -25,7 +25,7 @@
         <nav class="tm-main-nav">
             <ul id="inline-popups">
                 <li class="tm-nav-item">
-                    <a href="#intro" data-effect="mfp-move-from-top" class="tm-nav-link">
+                    <a data-effect="mfp-move-from-top" class="tm-nav-link", id="goToUserInfo">
                         User
                         <i class="fas fa-3x fa-water"></i>
                     </a>
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class="tm-nav-item">
-                    <a href="#testimonials" data-effect="mfp-move-from-top" class="tm-nav-link">
+                    <a data-effect="mfp-move-from-top" class="tm-nav-link", id="goToNews">
                         News
                         <i class="far fa-3x fa-smile"></i>
                     </a>
@@ -52,6 +52,8 @@
             </ul>
         </nav>
     </div>
+
+    <script src="http://127.0.0.1:5500/features/home/mainScript.js"></script>
 </body>
 
 </html>
