--- a/features/home/index.html
+++ b/features/home/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <header class="tm-site-header">
-        <h1 class="tm-mt-0 tm-mb-15"><span class="tm-color-primary">UniBookMi</span> <span
-                class="tm-color-gray-2">Home Page</span></h1>
+    <header class="tm-site-header", style="background-color: white;">
+        <h1 class="tm-mt-0 tm-mb-15"><span class="tm-color-primary">UniBookMi</span> <span class="tm-color-gray-2">Home
+                Page</span></h1>
         <em class="tm-tagline tm-color-light-gray">reservations</em>
     </header>
 
-    <!-- Video banner 400 px height -->
+
     <div id="tm-video-container">
         <video autoplay muted loop id="tm-video">
             <source src="video/uniVideo.mp4" type="video/mp4">
@@ -24,29 +24,36 @@
     <div class="tm-container">
         <nav class="tm-main-nav">
             <ul id="inline-popups">
+
+                <!-- USER -->
                 <li class="tm-nav-item">
-                    <a data-effect="mfp-move-from-top" class="tm-nav-link", id="goToUserInfo">
+                    <a data-effect="mfp-move-from-top" class="tm-nav-link" , id="goToUserInfo">
                         User
-                        <i class="fas fa-3x fa-water"></i>
-                    </a>
-                </li>
-                <li class="tm-nav-item">
-                    <a href="#gallery" data-effect="mfp-move-from-top" class="tm-nav-link" id="tm-gallery-link">
-                        Reservations
-                        <i class="far fa-3x fa-images"></i>
-                    </a>
-                </li>
-                <li class="tm-nav-item">
-                    <a data-effect="mfp-move-from-top" class="tm-nav-link", id="goToNews">
-                        News
-                        <i class="far fa-3x fa-smile"></i>
+                        <img src="http://127.0.0.1:5500/resources/icons/home/userIcon.png" alt="", style="width: 70%">
                     </a>
                 </li>
 
+                <!-- RESERVATIONS -->
+                <li class="tm-nav-item">
+                    <a href="#gallery" data-effect="mfp-move-from-top" class="tm-nav-link" id="tm-gallery-link">
+                        Reservations
+                        <img src="http://127.0.0.1:5500/resources/icons/home/reservationIcon.png" alt="", style="width: 70%;">
+                    </a>
+                </li>
+
+                <!-- NEWS -->
+                <li class="tm-nav-item">
+                    <a data-effect="mfp-move-from-top" class="tm-nav-link" , id="goToNews">
+                        News
+                        <img src="http://127.0.0.1:5500/resources/icons/home/newsIcon.png" alt="", style="width: 70%;">
+                    </a>
+                </li>
+
+                <!-- CONTACTS -->
                 <li class="tm-nav-item">
                     <a href="#contact" data-effect="mfp-move-from-top" class="tm-nav-link">
                         Contact
-                        <i class="far fa-3x fa-comments"></i>
+                        <img src="http://127.0.0.1:5500/resources/icons/home/contactIcon.png" alt="", style="width: 70%;">
                     </a>
                 </li>
             </ul>
