--- a/features/home/index.html
+++ b/features/home/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/favicon.ico">
-    <link rel="stylesheet" href="http://127.0.0.1:5500/resources/styles/main.css">
+    <link rel="icon" type="image/x-icon" href="https://unibookmi.altervista.org/resources/icons/favicon.ico">
+    <link rel="stylesheet" href="https://unibookmi.altervista.org/resources/styles/main.css">
 
 </head>
 
@@ -53,7 +53,7 @@
         </nav>
     </div>
 
-    <script src="http://127.0.0.1:5500/features/home/mainScript.js"></script>
+    <script src="https://unibookmi.altervista.org/features/home/mainScript.js"></script>
 </body>
 
 </html>
