--- a/features/userInfo/UserInfoView.html
+++ b/features/userInfo/UserInfoView.html
@@ -7,10 +7,10 @@
 
 <head>
     <title>UniBookMi</title>
-    <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="hhttps://unibookmi.altervista.org/resources/icons/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="http://127.0.0.1:5500/resources/styles/userInfo.css">
+    <link rel="stylesheet" href="https://unibookmi.altervista.org/resources/styles/userInfo.css">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
@@ -22,8 +22,8 @@
 <body>
 
     <div style="background-color: white; width: 100%;height:100px;">
-        <a href="http://127.0.0.1:5500/features/home/index.html"><img
-                src="http://127.0.0.1:5500/resources/images/logoOrizzontale.jpg" alt="HTML tutorial"
+        <a href="https://unibookmi.altervista.org/features/home/index.html"><img
+                src="https://unibookmi.altervista.org/resources/images/logoOrizzontale.jpg" alt="HTML tutorial"
                 style="width: 300px;height:100px; float: left;"></a>
 
     </div>
@@ -35,7 +35,7 @@
             <!-- User general info + pic -->
             <div class="col-md-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5"
-                        width="150px" src="http://127.0.0.1:5500/resources/images/profile pics/RoundProfilePic3.jpeg">
+                        width="150px" src="https://unibookmi.altervista.org/resources/images/profile pics/RoundProfilePic3.jpeg">
                     <span class="font-weight-bold">Studente</span><span class="email" ,
                         id="email1">giulia.floris@studenti.unimi.it</span>
                 </div>
@@ -105,7 +105,7 @@
             <!-- settings icon + mail -->
             <div class="col-md-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5"
-                        width="150px" src="http://127.0.0.1:5500/resources/images/settingsIcon.png">
+                        width="150px" src="https://unibookmi.altervista.org/resources/images/settingsIcon.png">
                     <span class="font-weight-bold">Settings</span><span class="email" ,
                         id="email2">giulia.floris@studenti.unimi.it</span>
                 </div>
@@ -130,7 +130,7 @@
 
 
     <!-- User script fetch departments -->
-    <script src="http://127.0.0.1:5500/features/userInfo/userInfoScript.js"></script>
+    <script src="https://unibookmi.altervista.org/features/userInfo/userInfoScript.js"></script>
     <script> fetchJson()</script>
 </body>
 
