--- a/features/home/index.html
+++ b/features/home/index.html
@@ -35,7 +35,7 @@
 
                 <!-- RESERVATIONS -->
                 <li class="tm-nav-item">
-                    <a href="#gallery" data-effect="mfp-move-from-top" class="tm-nav-link" id="tm-gallery-link">
+                    <a data-effect="mfp-move-from-top" class="tm-nav-link" id="tm-gallery-link">
                         Reservations
                         <img src="http://127.0.0.1:5500/resources/icons/home/reservationIcon.png" alt="", style="width: 70%;">
                     </a>
@@ -51,7 +51,7 @@
 
                 <!-- CONTACTS -->
                 <li class="tm-nav-item">
-                    <a href="#contact" data-effect="mfp-move-from-top" class="tm-nav-link">
+                    <a data-effect="mfp-move-from-top" class="tm-nav-link", id="goToContacts">
                         Contact
                         <img src="http://127.0.0.1:5500/resources/icons/home/contactIcon.png" alt="", style="width: 70%;">
                     </a>
