[018] FIX contact page

--- a/features/contacts/Contacts.html
+++ b/features/contacts/Contacts.html
@@ -60,21 +60,27 @@
                     <!-- User email -->
                     <div class="row mt-3">
                         <div class="col-md-12"><label class="labels">Email</label><input type="email"
-                                class="form-control" placeholder="enter email adress" value="" required=""></div>
+                                class="form-control" placeholder="email adress" value="" required=""></div>
                     </div>
 
+                     <!-- Message -->
                     <div class="row mt-3">
-                        <div class="col-md-12">
+                        <div class="col-md-12 message">
                             <label class="labels">Message</label>
-                            <input type="text"
-                                class="form-control" placeholder="message" value="" required=""></div>
+                            <textarea name="message" cols="40" rows="5" type="text" 
+                                 class="form-control-message" placeholder="message" value="" required=""></textarea>
+                            </div>
+
+                                
                     </div>
 
-                    <!-- send btn -->
+                    <!-- send btn type submit-->
                     <div class="mt-5 text-center"><button class="btn btn-primary profile-button", type="submit">
                         Submit</button></div>
 
                     </form>
+
+                    
                 </div>
             </div>
 
