--- a/features/contacts/Contacts.html
+++ b/features/contacts/Contacts.html
@@ -51,15 +51,16 @@
                     <form action="https://submit-form.com/JtTZXc3ql">
                     <!-- User name and surname -->
                     <div class="row mt-2">
-                        <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control"
+                        <div class="col-md-6"><label class="labels">Name</label><input type="text" name="name" class="form-control"
                                 placeholder="first name" value="" required=""></div>
                         <div class="col-md-6"><label class="labels">Surname</label><input type="text"
-                                class="form-control" value="" required="" placeholder="surname"></div>
+                            name="surname" class="form-control" value="" required="" placeholder="surname"></div>
                     </div>
 
                     <!-- User email -->
                     <div class="row mt-3">
-                        <div class="col-md-12"><label class="labels">Email</label><input type="email"
+                        <div class="col-md-12"><label class="labels">Email</label>
+                            <input type="email" name="email"
                                 class="form-control" placeholder="email adress" value="" required=""></div>
                     </div>
 
