--- a/features/login/login.html
+++ b/features/login/login.html
@@ -30,8 +30,8 @@
         <div class="form-container sign-in">
             <form>
                 <h1>Autenticate</h1>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+                <input type="email" placeholder="Email", id="emailLogin">
+                <input type="password" placeholder="Password" id="passwordLogin">
                 <a href="#">Forget Your Password?</a>
                 <button id="signIn">Sign In</button>
             </form>
