[020] ADD reservation files

--- a/features/home/index.html
+++ b/features/home/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <title>Home</title>
     <link rel="icon" type="image/x-icon" href="http://127.0.0.1:5500/resources/icons/logo2.ico">
@@ -12,12 +12,13 @@
     <header class="tm-site-header">
         <div class="tm-header-container">
             <h1 class="tm-mt-0 tm-mb-15">
-                <span class="tm-color-primary">UniBookMi</span> 
+                <span class="tm-color-primary">UniBookMi</span>
                 <span class="tm-color-gray-2">|Home Page</span>
             </h1>
-            <h2
-                class="booking-text"</p>Benvenuti !</p>Assicurati il tuo spazio <p></p>d'apprendimento preferito !
-                    <h2><a href="http://127.0.0.1:5500/features/reservation/reservation.html" class="tm-btn tm-btn-primary">Prenota Qui !</a></h2>
+            <h2 class="booking-text">
+                </p>Benvenuti !</p>Assicurati il tuo spazio <p></p>d'apprendimento preferito !
+                <h2><a href="http://127.0.0.1:5500/features/reservation/reservation.html"
+                        class="tm-btn tm-btn-primary">Prenota Qui !</a></h2>
             </h2>
             </h2>
         </div>
@@ -40,10 +41,11 @@
 
     <script src="http://127.0.0.1:5500/features/home/mainScript.js"></script>
 </body>
+
 </html>
 
 <style>
     .booking-text {
-        font-family:"kalam", cursive;
+        font-family: "kalam", cursive;
     }
 </style>
