[020] ADD reservation api

--- a/features/reservation/reservation.html
+++ b/features/reservation/reservation.html
@@ -29,28 +29,22 @@
                         <div class="form-row">
                             <select name="class" >
                                 <option value="class-select">Seleziona Aula</option>
-                                <option value="50">Aula Alfa - Paolo Ceravolo - Max 20Pers.</option>
-                                <option value="50">Aula Beta - Nello Scarabottolo - Max 35Pers.</option>
-                                <option value="50">Aula Gamma - Michele Ferrazano - Max 15Pers.</option>
-                                <option value="50">Aula Delta - Ernesto Damiani - Max 10Pers.</option>
-                                <option value="50">Aula Epsilon - Vincenzo Piuri - Max 45Pers.</option>
-                                <option value="50">Aula Zeta - Mario Testino - Max 30Pers.</option>
-                                <option value="50">Aula Eta - Anisetti Marco - Max 55Pers.</option>
+                                <option value="Aula Alfa - Paolo Ceravolo - Max 20Pers.">Aula Alfa - Paolo Ceravolo - Max 20Pers.</option>
+                                <option value="Aula Beta - Nello Scarabottolo - Max 35Pers.">Aula Beta - Nello Scarabottolo - Max 35Pers.</option>
+                                <option value="Aula Gamma - Michele Ferrazano - Max 15Pers.">Aula Gamma - Michele Ferrazano - Max 15Pers.</option>
+                                <option value="Aula Delta - Ernesto Damiani - Max 10Pers">Aula Delta - Ernesto Damiani - Max 10Pers.</option>
+                                <option value="Aula Epsilon - Vincenzo Piuri - Max 45Pers.">Aula Epsilon - Vincenzo Piuri - Max 45Pers.</option>
+                                <option value="Aula Zeta - Mario Testino - Max 30Pers.">Aula Zeta - Mario Testino - Max 30Pers.</option>
+                                <option value="Aula Eta - Anisetti Marco - Max 55Pers.">Aula Eta - Anisetti Marco - Max 55Pers.</option>
                             </select>
-                        </div>
-
-                        <div class = "form-row">
-                            <input type = "text" placeholder="Full Name" >
-                            <input type = "text" placeholder="Matricola" >
-                            <input type = "email" placeholder="Email" >
                         </div>
 
                         <div class = "form-row">
                             <select name="Address" >
                                 <option value="Address">Address/location</option>
-                                <option value="50">Via Celoria</option>
-                                <option value="50">Via Venezian</option>
-                                <option value="50">Via Golgi</option>
+                                <option value="Via Celoria">Via Celoria</option>
+                                <option value="Via Venezian">Via Venezian</option>
+                                <option value="Via Golgi">Via Golgi</option>
                             </select>
                             <input type="button" id="bookButton" value="Prenota aula">
                         </div>
