--- a/features/userInfo/Dashboard.html
+++ b/features/userInfo/Dashboard.html
@@ -72,15 +72,13 @@
                 <li><strong>Email:</strong> <span id="email"></span></li>
             </ul>
         </div>
+        <div id="reservationsContainer">
         <div class="fixed-info">
             <h1>Le tue Aule Prenotate:</h1>
-         <ul>
-            <li><strong>ID prenotazione:</strong> <span id="idReservation"></span></li>
-            <li><strong>Aula:</strong> <span id="room"></span></li>
-            <li><strong>Indirizzo sede:</strong> <span id="address"></span></li>
-            <li><strong>Giorno: </strong> <span id="day"></span></li>
-         </ul>
+            <ul id="roomList"></ul>
         </div>
+      </div>
+
     </main>
       <!-- End Main -->
 
